# TicTacToe

./: Algorithm.cpp  Algorithm.h  Board.cpp  Board.h  BoardItem.qml  CMakeLists.txt  ConfigItem.qml  Controller.cpp  Controller.h  FinishDialog.qml  GameUtils.cpp  GameUtils.h  Main.qml  MinimaxAlgorithm.cpp  MinimaxAlgorithm.h  Style.qml  TicTacToe.pro  Tile.cpp  Tile.h  TileItem.qml  main.cpp  main.qml  main_.qml  qml.qrc
ui/: Board.qml  CMakeLists.txt  DefaultPage.qml  Tile.qml  TileItem.qml  TileState.h  Types.h  boardmodel.cpp  boardmodel.h  controller.cpp  controller.h  player.cpp  player.h  tictactoe.cpp  tictactoe.h
